[package]
name = "hello"
version = "0.1.0"
authors = ["livelybug <livelybug@gmail.com>"]
edition = "2018"

[dependencies]
rand = "0.7"
my_crate = { path = "my_crate" }
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
futures = "0.3.4"